CMAKE_MINIMUM_REQUIRED( VERSION 3.9 )
PROJECT(glinfo)

SET(MAJOR 1)
SET(MINOR 0)
SET(PATCH 0)
SET(STATE a)
SET(VERSION ${MAJOR}.${MINOR}${STATE}${PATCH} )
ADD_DEFINITIONS(-DGLIF_VERSION="${VERSION}")

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/extern/fragcore EXCLUDE_FROM_ALL)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/extern/fragcore/modules/imageloader EXCLUDE_FROM_ALL)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/extern/fragcore/modules/window EXCLUDE_FROM_ALL)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/extern/fragcore/modules/window/sdl EXCLUDE_FROM_ALL)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/extern/fragcore/modules/renderer EXCLUDE_FROM_ALL)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/extern/fragcore/modules/renderer/opengl EXCLUDE_FROM_ALL)


FILE(GLOB source ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/src/argument.cpp)

#
ADD_EXECUTABLE(glinfo ${source} ${glsrc})
TARGET_LINK_LIBRARIES(glinfo fragcore fragcore-rgl)
TARGET_INCLUDE_DIRECTORIES(glinfo PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)

INSTALL(TARGETS glinfo DESTINATION bin)
